# uberClock

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  vivado_pid81017.str  vivado_pid83815.str
.github/workflows/: docs.yml
0.doc/: 0.README.txt  Doxyfile
0.doc/Alinx/: 0.README.txt  README.md
0.doc/C++/: 0.README.txt
0.doc/RISC-V/: 0.README.txt
0.doc/docs/: Makefile  requirements.txt
0.doc/images/: characterization_data_flow.drawio  ddr3_capture_path.drawio  firmware_runtime_flow.drawio  litex_soc_architecture.drawio  python_soc_package_architecture.drawio  repo_structure.drawio  system_hardware_architecture.drawio  uberclock_rtl_datapath.drawio
1.dsp/AD_DA_conversion/: AD_DA_constr.xdc  AD_DA_interface.v  ad9238_sample.v
1.dsp/ad_da_conversion/: AD_DA_interface.v  README.md  ad9238_sample.v
1.dsp/cordic_downconversion/: README.md
1.dsp/sim/: README.md  tb_uberclock.v
1.hw/AD_DA_conversion/: AD_DA_constr.xdc  AD_DA_interface.v  README.md
2.soc/: README.md  setup_dev.sh
2.soc-litex/: ICD.md  README.md  install_litex.sh
2.soc-litex/0.doc/: ICD.md  Installation.md
2.soc-litex/1.hw/: README.md
2.soc/8.python/: .gitignore  README.md  pyproject.toml
2.soc/8.python/src/targets/: alinx_ax7203_uberclock.py
2.soc/8.python/src/uberclock_soc/: __init__.py  __main__.py  clocking.py  csr_snapshot_fifo.py  rtl_filelist.py  rtl_sources.py  sim.py  soc.py  streams.py  ubddr3.py  uberclock_core.py  uberclock_csrs.py  wishbone.py
3.build/: Makefile  README.rst
3.miniac/: README.md
4.miniac/: README.md
5.characterization/: README.md
(+965 files in other folders)
