[build-system]
requires = [
    "setuptools>=68",
    "meson>=1.3",
    "meson-python>=0.15"
]
build-backend = "setuptools.build_meta"

[project]
name = "uberclock-soc"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
uberclock-soc = "uberclock_soc.soc:build_main"

[tool.setuptools]
package-dir = {"" = "src"}
